# hax712x_project

./: .gitignore  .pre-commit-config.yaml  README.md  essai  pyproject.toml  requirements.txt  script.py  setup.py
.github/workflows/: integrate.yml
Trackelec/: __init__.py
Trackelec/predic/: Prédiction sources d'énergie.ipynb  moyenne_autres.ipynb  moyenne_autres_sources.py  pred_sources.py
Trackelec/visu/: viz.py
data/: Conso2012.csv  Conso2013.csv  Conso2014.csv  Conso2015.csv  Conso2016.csv  clean_data.py  d2017.csv  d2018.csv  d2019.csv  d2020.csv  d2021.csv
docs/: README.md  conf.py  index.rst  moysources.rst  predsources.rst  prophetpred.rst  visualisation.rst
prediction/: essai
project/prediction/: Prédiction sources d'énergie.ipynb  conso 08_12.py  conso décembre.py  moyenne_autres.ipynb  moyenne_autres_sources.py  pred_sources.py  prediction.ipynb  sanstitre2.py  vent.py
project/visualization/: viz.py
tests/: dumb_test.py
tests/prediction/: ps.py  test_ps.py
trackelec/: __init__.py
trackelec/io/: __init__.py  load_datacons.py  load_datacons2022.py  load_dataviz.py
trackelec/predic/: Prédiction sources d'énergie.ipynb  moyenne_autres.ipynb  moyenne_autres_sources.py  pred_sources.py  prediction.ipynb  prediction_8_dec.csv  prediction_consommation.ipynb  test_gaz.py
trackelec/tests/: ps.py  test_ps.py
trackelec/visu/: viz.py
