[tool.poetry]
name = "trackelec"
version = "0.1.0"
description = ""
authors = [
	"Pauline Dusfour-Castan <pauline.dusfourcastan@gmail.com>",
	"Thibault Ferretti <thibaultferretti@gmail.com>",
	"Sarah Matoub <sarah19mtb@gmail.com>",
	"Guillaume Bernard-Reymond <guillaume.bernardreymond@gmail.com>",
	"mle-seach <mle-seach@users.noreply.github.com>"
]
readme = "README.md"
packages = [{include = "Trackelec"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
download = "^0.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
